WHATEVER	WHENEVER	Javier Taibo <javier.taibo@gmail.com>
	Texture anisotropic filtering. Export configuration option -maxAnisotropy to set the maximum number of samples to use
	New export configuration options: exporting normals and exporting texture coordinates can now be disabled from the GUI
	BUG FIX. Opaque geometry was put into transparent bin
	Bump mapping. Automatic conversion from bump to normal maps
	Meshes export tangent arrays to be used in shading effects like bump mapping
	Support for Maya shading nodes: Lambert, FileTexture, Bump2D
	Added framework to export Maya shading networks to GLSL code (see documentation in the wiki page)
	Implemented backface culling and double side illumination in the GLSL shader
	Multiple texture coordinate sets (Maya UV sets) for use in GLSL shaders. Each texture connected to a shader channel use the corresponding TC set
	Shading code revamp. Now OpenGL fixed function pipeline is limited to only one color texture (optionally including transparency)
	Added two handy buttons to the shelf: toggle face normals display and reverse polygon normals. Very handy to quickly check and correct single side polygonal surfaces

0.4.2c	2010/11/04	Javier Taibo <javier.taibo@gmail.com>
	BUG FIX. Corrected Linux Makefiles and compilation bugs in Linux
	
0.4.2b	2010/10/28	Javier Taibo <javier.taibo@gmail.com>
	BUG FIX. Corrected Linux Makefiles and compilation bugs in Linux
	BUG FIX. Corrected typo in common.h that broke compilation under Linux

0.4.2	2010/10/26	Javier Taibo <javier.taibo@gmail.com>
	Hidden (visibility=false) nodes (and their children) are not exported
	Camera animation files are now prefixed by the scene base file name
	Previsualization from Maya uses camera configuration from active panel (if exported)
	BUG FIX exporting cameras under transform nodes. Now the whole hierarchy is correctly applied
	BUG FIX exporting camera animations. Path was wrong when converting from Y-up to Z-up