@@ -85,6 +85,7 @@ global proc maya2osg_doExportGUI(string $file, string $format)
 	global string $maya2osg_global_ambient;
 	global string $maya2osg_local_viewer;
 	global string $maya2osg_use_glsl;
+	global string $maya2osg_enable_bumpmapping;
 	global string $maya2osg_export_normals;
 	global string $maya2osg_export_texcoords;
 	global string $maya2osg_max_aniso;
@@ -148,6 +149,9 @@ global proc maya2osg_doExportGUI(string $file, string $format)
 	// GLSL shaders
 	$command += " -useGLSL " + `checkBox -q -value $maya2osg_use_glsl`;
 	
+	// Bump mapping
+	$command += " -enableBumpMapping " + `checkBox -q -value $maya2osg_enable_bumpmapping`;
+	
 	// Export normals
 	$command += " -exportNormals " + `checkBox -q -value $maya2osg_export_normals`;
 	
@@ -183,6 +187,7 @@ proc maya2osg_options(){
 	global string $maya2osg_global_ambient;
 	global string $maya2osg_local_viewer;
 	global string $maya2osg_use_glsl;
+	global string $maya2osg_enable_bumpmapping;
 	global string $maya2osg_export_normals;
 	global string $maya2osg_export_texcoords;
 	global string $maya2osg_max_aniso;
@@ -245,6 +250,7 @@ proc maya2osg_options(){
 					columnLayout;
 						//text -label "Coming soon..." -height $line_height;
 						$maya2osg_use_glsl = `checkBox -label "Build GLSL shaders" -value 0 -height $line_height`;
+						$maya2osg_enable_bumpmapping = `checkBox -label "Bump mapping" - value 1 -height $line_height`;
 						setParent ..;
 					setParent ..;
 				$frame_geometry = `frameLayout -label "Lighting" -collapsable true -marginWidth $marginW -marginHeight $marginH`;
