@@ -1,4 +1,5 @@
 WHATEVER	WHENEVER	Javier Taibo <javier.taibo@gmail.com>
+	Configuration option -enableBumpMapping to enable or disable bump mapping when exporting GLSL shaders
 	Texture anisotropic filtering. Export configuration option -maxAnisotropy to set the maximum number of samples to use
 	New export configuration options: exporting normals and exporting texture coordinates can now be disabled from the GUI
 	BUG FIX. Opaque geometry was put into transparent bin
